--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=Files/html/index.html">
+        <meta http-equiv="refresh" content="1;url=https://1joey23.github.io/Mary-s-Toys/Files/html/index.html">
         <title>Page Redirection</title>
     </head>
     <body>
         If you are not redirected automatically, 
-        follow the <a href="Files/html/index.html">link to the documentation</a>
+        follow the <a href="https://1joey23.github.io/Mary-s-Toys/Files/html/index.html">link to the documentation</a>
     </body>
 </html>
